--- a/projects.html
+++ b/projects.html
@@ -132,20 +132,20 @@ body {
     <div class="card">
       <h2>Hứng táo</h2>
       <h5>Dùng phím mũi tên để di chuyển</h5>
-      <div class="game" style="height: fit-content;width:70%;padding: 10px; margin: auto; width: fit-content;"><img src="https://1.bp.blogspot.com/-hN0NCoAmEDY/X8z1OcRjXmI/AAAAAAAAlc0/hHqbHzqOPhIABiVomzpYacPeEufV816QQCNcBGAsYHQ/w350-h265-p-k-no-nu/hinh-nen-may-cuc-dep.jpg" alt=""></div>
+      <div class="game" style="height: fit-content;width:70%;padding: 10px; margin: auto; width: fit-content;"><img src="img.jpg/hungtao.jpg" alt=""></div>
       <a href="https://scratch.mit.edu/projects/602581893"target="_blank" class="button">chơi thử</a>
     </div>
     <div class="card">
       <h2>Flappy bird</h2>
       <h5>Dùng space để bắt đầu và chơi</h5>
-      <div class="game" style="height: fit-content;width:70%;padding: 10px; margin: auto; width: fit-content;"><img src="https://1.bp.blogspot.com/-hN0NCoAmEDY/X8z1OcRjXmI/AAAAAAAAlc0/hHqbHzqOPhIABiVomzpYacPeEufV816QQCNcBGAsYHQ/w350-h265-p-k-no-nu/hinh-nen-may-cuc-dep.jpg"></div>
+      <div class="game" style="height: fit-content;width:70%;padding: 10px; margin: auto; width: fit-content;"><img src="img.jpg/fp.jpg"></div>
       <a href="https://scratch.mit.edu/projects/604542760"target="_blank" class="button">chơi thử</a>
     </div>
   </div>
   <div class="rightcolumn">
     <div class="card">
       <h2>Knife</h2>
-      <div class="game" style="height: fit-content;width:70%;padding: 10px; margin: auto; width: fit-content;"><img src="https://9mobi.vn/cf/images/2015/03/nkk/hinh-dep-1.jpg"></div>
+      <div class="game" style="height: fit-content;width:70%;padding: 10px; margin: auto; width: fit-content;"><img src="img.jpg/knife.jpg"></div>
       <h5>Sử dụng space để bắt đầu và chơi</h5>
       <a href="https://scratch.mit.edu/projects/605787883"target="_" class="button">chơi thử</a>
     </div>
@@ -157,8 +157,6 @@ body {
     </div>
   </div>
 </div>
-
-
 </body>
 </html>
 
